style4.css
.container {
    display: grid;
   align-items: center;
   justify-content: center;
   align-self: flex-end;
  

}

.uno {
    width: 200px;
    height:200px;
    background-color: red;
    flex-shrink: 1;
    align-self: baseline;
}

.due {
    width: 200px;
    height:200px;
    background-color: blue;
    flex-shrink: 0;
    flex-basis: 500px;
    align-self:center;
}

.tre {
    background-color: black;
    width: 200px;
    height:200px;
    flex-grow: 2;
}

.grid-container {
    display: grid;
    grid-template-columns: repeat(5, 100px);
    justify-content: center;
    align-items: center;
   
}

.grid-container div {
    border: 1px solid ;
    
}

.grid-container .second-row {
width: 300px;
height: 300px;
}

.grid-container .first-row {
    width: 200px;
    height: 200px;
}

@media  only screen and (max-width: 768px) {
 body {
    background-color: blue;
 }
    
}

